@@ -268,7 +268,7 @@ use IO ();	# Load the XS module
 require Exporter;
 @ISA = qw(Exporter);
 
-$VERSION = "1.27_02";
+$VERSION = "1.28";
 $VERSION = eval $VERSION;
 
 @EXPORT_OK = qw(
